--- a/source/princess.scss
+++ b/source/princess.scss
@@ -5,6 +5,7 @@
 // Modules: elements
 @import "modules/alerts";
 @import "modules/animations";
+@import "modules/backgrounds";
 @import "modules/buttons";
 @import "modules/forms";
 @import "modules/images";
