--- a/source/helpers/_var.scss
+++ b/source/helpers/_var.scss
@@ -14,8 +14,15 @@ $lineHeight: 1.5;
 $padding: 20;
 $margin: 20;
 
-// Modules
-$borderRadius: 20px;
+// ------- //
+// Modules //
+// ------- //
+
+// Border radius
+$rounded: $padding/4;
+$round: $padding;
+
+// Misc
 $transition: 500ms;
 $verticalMenuWidth: 250;
 
