--- a/docs/princess/princess.css
+++ b/docs/princess/princess.css
@@ -857,6 +857,11 @@ Module: images
   -ms-border-radius: 100%;
   border-radius: 100%; }
 
+.prncs-img-shadow {
+  -webkit-box-shadow: 10px 10px 21px -4px rgba(0, 0, 0, 0.39);
+  -moz-box-shadow: 10px 10px 21px -4px rgba(0, 0, 0, 0.39);
+  box-shadow: 10px 10px 21px -4px rgba(0, 0, 0, 0.39); }
+
 /**
 Princess
 Module: jekyll
