--- a/source/modules/_images.scss
+++ b/source/modules/_images.scss
@@ -4,7 +4,7 @@ Module: images
 **/
 
 @import "../mixins/borders";
-@import "../mixins/box_shadow";
+@import "../mixins/boxshadow";
 
 .prncs-img-rounded {
   @include borderRadius($rounded);
